fix: grid on mobile in order component

--- a/src/components/Order/Order.module.css
+++ b/src/components/Order/Order.module.css
@@ -49,3 +49,13 @@
 .desc {
   margin: 0;
 }
+
+@media (max-width: 767px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+
+  .row {
+    display: block;
+  }
+}
